--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
-  <title>Outdoor Eats Rater</title>  
+  <title>Outdoor Dining Rater</title>  
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
